--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.0",
+    "react-tooltip": "^5.28.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
